MOTECH-2131: Remove gradients created with image file

--- a/ui/src/css/bootstrap-page.scss
+++ b/ui/src/css/bootstrap-page.scss
@@ -1,3 +1,12 @@
+@mixin lightblue-bg($y) {
+    background: rgb(255,255,255) repeat-x 0 $y;
+    background: -moz-linear-gradient(top, rgb(255,255,255) 0%, rgb(253,255,254) 9%, rgb(251,252,255) 9%, rgb(239,249,251) 10%, rgb(239,248,253) 10%, rgb(236,247,251) 10%, rgb(237,246,253) 10%, rgb(223,240,248) 12%, rgb(221,238,248) 13%, rgb(222,239,247) 14%, rgb(226,240,249) 14%, rgb(225,239,248) 15%, rgb(227,241,250) 15%, rgb(230,243,249) 16%, rgb(234,245,251) 16%, rgb(242,250,253) 19%, rgb(245,250,254) 19%, rgb(246,251,255) 24%, rgb(243,251,254) 24%, rgb(241,249,252) 28%, rgb(240,249,254) 32%, rgb(240,248,251) 32%, rgb(232,245,251) 40%, rgb(233,244,250) 43%, rgb(230,243,251) 43%, rgb(232,242,251) 44%, rgb(224,241,249) 50%, rgb(226,240,249) 50%, rgb(222,239,247) 52%, rgb(222,239,249) 53%, rgb(217,237,246) 58%, rgb(218,236,248) 59%, rgb(214,236,247) 60%, rgb(213,232,246) 64%, rgb(209,233,245) 66%, rgb(206,229,243) 74%, rgb(206,229,243) 83%, rgb(208,232,244) 83%, rgb(211,230,245) 84%, rgb(209,233,245) 84%, rgb(213,232,246) 85%, rgb(212,234,247) 85%, rgb(215,235,246) 86%, rgb(214,234,245) 86%, rgb(218,236,248) 87%, rgb(221,238,246) 89%, rgb(222,239,249) 89%, rgb(224,238,247) 90%, rgb(227,242,249) 91%, rgb(232,243,249) 93%, rgb(234,245,251) 93%, rgb(234,245,249) 94%, rgb(236,245,254) 94%, rgb(236,245,250) 94%, rgb(238,245,251) 95%, rgb(238,248,250) 96%, rgb(239,246,252) 96%, rgb(241,249,252) 96%, rgb(247,251,252) 99%, rgb(251,252,254) 100%) repeat-x 0 $y;
+    background: -webkit-linear-gradient(top, rgb(255,255,255) 0%,rgb(253,255,254) 9%,rgb(251,252,255) 9%,rgb(239,249,251) 10%,rgb(239,248,253) 10%,rgb(236,247,251) 10%,rgb(237,246,253) 10%,rgb(223,240,248) 12%,rgb(221,238,248) 13%,rgb(222,239,247) 14%,rgb(226,240,249) 14%,rgb(225,239,248) 15%,rgb(227,241,250) 15%,rgb(230,243,249) 16%,rgb(234,245,251) 16%,rgb(242,250,253) 19%,rgb(245,250,254) 19%,rgb(246,251,255) 24%,rgb(243,251,254) 24%,rgb(241,249,252) 28%,rgb(240,249,254) 32%,rgb(240,248,251) 32%,rgb(232,245,251) 40%,rgb(233,244,250) 43%,rgb(230,243,251) 43%,rgb(232,242,251) 44%,rgb(224,241,249) 50%,rgb(226,240,249) 50%,rgb(222,239,247) 52%,rgb(222,239,249) 53%,rgb(217,237,246) 58%,rgb(218,236,248) 59%,rgb(214,236,247) 60%,rgb(213,232,246) 64%,rgb(209,233,245) 66%,rgb(206,229,243) 74%,rgb(206,229,243) 83%,rgb(208,232,244) 83%,rgb(211,230,245) 84%,rgb(209,233,245) 84%,rgb(213,232,246) 85%,rgb(212,234,247) 85%,rgb(215,235,246) 86%,rgb(214,234,245) 86%,rgb(218,236,248) 87%,rgb(221,238,246) 89%,rgb(222,239,249) 89%,rgb(224,238,247) 90%,rgb(227,242,249) 91%,rgb(232,243,249) 93%,rgb(234,245,251) 93%,rgb(234,245,249) 94%,rgb(236,245,254) 94%,rgb(236,245,250) 94%,rgb(238,245,251) 95%,rgb(238,248,250) 96%,rgb(239,246,252) 96%,rgb(241,249,252) 96%,rgb(247,251,252) 99%,rgb(251,252,254) 100%) repeat-x 0 $y;
+    background: linear-gradient(to bottom, rgb(255,255,255) 0%,rgb(253,255,254) 9%,rgb(251,252,255) 9%,rgb(239,249,251) 10%,rgb(239,248,253) 10%,rgb(236,247,251) 10%,rgb(237,246,253) 10%,rgb(223,240,248) 12%,rgb(221,238,248) 13%,rgb(222,239,247) 14%,rgb(226,240,249) 14%,rgb(225,239,248) 15%,rgb(227,241,250) 15%,rgb(230,243,249) 16%,rgb(234,245,251) 16%,rgb(242,250,253) 19%,rgb(245,250,254) 19%,rgb(246,251,255) 24%,rgb(243,251,254) 24%,rgb(241,249,252) 28%,rgb(240,249,254) 32%,rgb(240,248,251) 32%,rgb(232,245,251) 40%,rgb(233,244,250) 43%,rgb(230,243,251) 43%,rgb(232,242,251) 44%,rgb(224,241,249) 50%,rgb(226,240,249) 50%,rgb(222,239,247) 52%,rgb(222,239,249) 53%,rgb(217,237,246) 58%,rgb(218,236,248) 59%,rgb(214,236,247) 60%,rgb(213,232,246) 64%,rgb(209,233,245) 66%,rgb(206,229,243) 74%,rgb(206,229,243) 83%,rgb(208,232,244) 83%,rgb(211,230,245) 84%,rgb(209,233,245) 84%,rgb(213,232,246) 85%,rgb(212,234,247) 85%,rgb(215,235,246) 86%,rgb(214,234,245) 86%,rgb(218,236,248) 87%,rgb(221,238,246) 89%,rgb(222,239,249) 89%,rgb(224,238,247) 90%,rgb(227,242,249) 91%,rgb(232,243,249) 93%,rgb(234,245,251) 93%,rgb(234,245,249) 94%,rgb(236,245,254) 94%,rgb(236,245,250) 94%,rgb(238,245,251) 95%,rgb(238,248,250) 96%,rgb(239,246,252) 96%,rgb(241,249,252) 96%,rgb(247,251,252) 99%,rgb(251,252,254) 100%) repeat-x 0 $y;
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#fbfcfe',GradientType=0 );
+    background-repeat: repeat-x;
+}
+
 html, body {
     margin: 0;
     padding: 0;
@@ -5,15 +14,15 @@ html, body {
 }
 
 .body-up {
-    background: #ffffff url("../img/lightblue-bg.jpg") repeat-x 0 -40px;
+    @include lightblue-bg(-40px);
 }
 
 .body-down {
-    background: #ffffff url("../img/lightblue-bg.jpg") repeat-x 0 0;
+    @include lightblue-bg(0);
 }
 
 .body-startup {
-    background: #ffffff url("../img/lightblue-bg.jpg") repeat-x 0 -70px;
+    @include lightblue-bg(-70px);
 }
 
 .fa.icon-red {
@@ -57,6 +66,7 @@ a {
 .header {
     display:block;
     margin:auto;
+    background: #ffffff;
 }
 
 .dashboard-logo {
@@ -152,7 +162,7 @@ a {
 /* ----- startup ----- */
 
 .body-startup {
-    background: #ffffff url("../img/lightblue-bg.jpg") repeat-x 0 -95px;
+    @include lightblue-bg(-65px);
 }
 
 .body-startup .bodywrap {
@@ -170,7 +180,7 @@ a {
     min-height: 200px;
     margin: auto;
     z-index: 9999;
-    background: #ffffff url("../img/lightblue-bg.jpg") repeat-x 0 60px;
+    @include lightblue-bg(60px);
     border:1px #7bb5fc solid;
     -webkit-border-radius: 4px;
          -moz-border-radius: 4px;
